# nnc

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp  mnist.cpp  shell.nix
insnsel/: FlexLexer.h  archdesc.cpp  archdesc.hpp  ast.cpp  ast.hpp  error.cpp  error.hpp  gen.hpp  insn.cpp  insn.hpp  insnrule.cpp  insnrule.hpp  lexer.cpp  lexer.hpp  lexer.l  location.hh  main.cpp  parser.cpp  parser.hpp  parser.y  regclass.cpp  register.cpp  templatestring.cpp  templatestring.hpp
src/: #pretty.cpp#  .#pretty.cpp  arch.hpp  castop.cpp  castop.hpp  categorical.cpp  categorical.hpp  cpu.hpp  data_type.hpp  error_reporter.cpp  error_reporter.hpp  errors.cpp  errors.hpp  exception.cpp  exception.hpp  executor.cpp  executor.hpp  graph.cpp  graph.hpp  graphviz.cpp  graphviz.hpp  invoke.cpp  invoke.hpp  memory_tensor.hpp  mnist.hpp  op.hpp  pretty.hpp  primop.cpp  primop.hpp  tensor.cpp  tensor.hpp  tensor_util.hpp  util.hpp
src/compile/: #rules#  .#genericschedule.hpp  arbitrary.hpp  cconv.cpp  cconv.hpp  constant_propagation.cpp  constant_propagation.hpp  controlflow.cpp  controlflow.hpp  dataflow.cpp  dataflow.hpp  dump.cpp  dump.hpp  encoding.cpp  encoding.hpp  genericschedule.cpp  genericschedule.hpp  insnsched.cpp  insnsched.hpp  insnsel.cpp  insnsel.hpp  linear_alloc.cpp  linear_alloc.hpp  link.cpp  link.hpp  loops.hpp  manager.cpp  manager.hpp  regalloc.cpp  regalloc.hpp  registers.cpp  registers.hpp  regset.cpp  regset.hpp  reorder.cpp  reorder.hpp  rtl.cpp  rtl.hpp  rtl_ops.cpp  rtl_ops.hpp  (+11 more)
src/compile/x86_64/: arch.archdesc  cconv.cpp  cconv.hpp  ctypes.archdesc  encoding.cpp  encoding.hpp  insns.archdesc  manager.cpp  manager.hpp  registers.archdesc  rules.archdesc  types.cpp  types.hpp
src/cpu/: cpu.cpp  cpu_op.cpp  cpu_op.hpp  rtl.cpp  rtl.hpp
src/executor/: basic.cpp  basic.hpp
src/graph/: dfs.hpp  repr.hpp  toposort.hpp
src/op/: matmul.cpp  matmul.hpp  reshape.cpp  reshape.hpp
test/: tensor.cpp
